# prime-data

./: Cargo.toml  README.md  integration_tests.rs
src/: lib.rs
src/data/: error.rs  mod.rs  prime_byte.rs  prime_data.rs
src/data/estimate/: mod.rs  nth_prime.rs  upper_bound.rs
src/data/factors/: mod.rs
src/data/iterators/: coprime.rs  mod.rs  prime.rs
src/data/utils/: arithmetic.rs  mod.rs
src/guide/: conventions.md  mod.rs
tests/: integration_tests.rs
tests/data/: mod.rs
