[package]
name = "prime-data"
version = "0.1.0"
authors = "Kia Strawberries"
edition = "2021"
description = "Prime Number Data Library"
readme = "README.md"
repository = "https://github.com/uwukia/prime-data"
license = "MIT OR Apache-2.0"
keywords = ["primes", "primality", "primal"]
cathegory = ["mathematics", "data-structures"]

[workspace]

[dependencies]

[profile.test]
opt-level = 3

[features]
all = ["factors"]
factors = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]