[package]
name = "prime-data"
version = "0.1.1"
authors = ["Kia Strawberries"]
edition = "2021"
description = "Prime Number Data Library"
readme = "README.md"
repository = "https://github.com/uwukia/prime-data"
license = "MIT OR Apache-2.0"
keywords = ["primes", "primality", "primal"]
categories = ["mathematics", "data-structures"]
exclude = ["src/guide/conventions.md"]

[workspace]

[dependencies]

[profile.test]
opt-level = 3

[features]
all = ["factors"]
factors = []

[package.metadata.docs.rs]
all-features = true